# k4SimDelphes

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  K4SIMDELPHESVersion.h  README.md  check_testoutput.py  edited_FCChh_card.tcl  edm4hep_path.py  k4SimDelphesVersion.h  readme_conversiontest.md
.github/workflows/: doctest.yaml  key4hep-build.yaml  pre-commit.yml  test.yml
cmake/: FindDelphes.cmake  FindEvtGen.cmake  FindPythia8.cmake  K4SIMDELPHESCPack.cmake  K4SIMDELPHESConfig.cmake.in  K4SIMDELPHESCreateConfig.cmake  K4SIMDELPHESUninstall.cmake  k4SimDelphesCPack.cmake  k4SimDelphesConfig.cmake.in  k4SimDelphesCreateConfig.cmake  k4SimDelphesUninstall.cmake
converter/: CMakeLists.txt
converter/include/k4SimDelphes/: DelphesEDM4HepConverter.h  DelphesEDM4HepOutputConfiguration.h  k4GenParticlesDelphesConverter.h
converter/include/k4simdelphes/: DelphesEDM4HepConverter.h  DelphesEDM4HepOutputConfiguration.h  delphesHelpers.h
converter/src/: DelphesEDM4HepConverter.cc  delphesHelpers.h
doc/: ReleaseNotes.md  output_config.md
doc/starterkit/k4SimDelphes/: Readme.md
docker/: Dockerfile  README.md  init_env.sh  requirements.txt
examples/: AssociationHelper.h  CMakeLists.txt  EDM4Hep2LCIO_example.py  README.md  common_helpers.h  edm4hep_IsoM.ipynb  edm4hep_IsoM.md  edm4hep_output_config.tcl  higgs_recoil_plots.C  read_delphes.C  read_edm4hep.C
examples/data/: ee_Z_bbbar_ecm91GeV.cmd  events.lhe  lhe_tester_ggHH.lhe  p8_pp_tt012j_5f_HT_25000_35000.cmd  tester_pwp8_pp_hh_5f_hh_incl.cmd  tester_pwp8_pp_hh_5f_hhbbyy.cmd
framework/: CMakeLists.txt
framework/k4SimDelphes/: CMakeLists.txt
framework/k4SimDelphes/examples/options/: delphes_card_IDEA.tcl  edm4hep_output_config.tcl  k4simdelphesalg.py  k4simdelphesalg_pythia.py
framework/k4SimDelphes/src/: ExRootTreeWriter.h  k4GenParticlesDelphesConverter.h  k4SimDelphesAlg.cpp  k4SimDelphesAlg.h
framework/k4SimDelphes/tests/options/: k4simdelphesalg.py
standalone/: CMakeLists.txt
standalone/src/: DelphesHepMC2Reader.h  DelphesHepMC2_EDM4HEP.cpp  DelphesHepMC3Reader.h  DelphesHepMC3_EDM4HEP.cpp  DelphesHepMCReader.h  DelphesHepMC_EDM4HEP.cpp  DelphesInputReader.h  DelphesMain.h  DelphesPythia8Common.h  DelphesPythia8EvtGenReader.h  DelphesPythia8EvtGenReader_k4Interface.h  DelphesPythia8EvtGenReader_marcin.h  DelphesPythia8EvtGen_EDM4HEP.cpp  DelphesPythia8EvtGen_EDM4HEP_k4Interface.cpp  DelphesPythia8Reader.h  DelphesPythia8_EDM4HEP.cpp  DelphesROOT_EDM4HEP.cpp  DelphesRootReader.h  DelphesSTDHEPInputReader.h  DelphesSTDHEP_EDM4HEP.cpp  PythiaEvtGen_Interface.cc  PythiaEvtGen_Interface.h
tests/: CMakeLists.txt  testDriver.sh
tests/data/: Example1.C  delphes_card_IDEAtrkCov.tcl  delphes_test_01.tcl  gev91ee_zboson_100events.root
tests/src/: compare_delphes_converter_outputs.cpp
tests/unittests/: CMakeLists.txt  test_utils.h  tests.cpp  tests_edm4hepdelphesconverter.cpp
